--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
     "@iconify-json/mdi": "^1.2.3",
+    "@nanostores/react": "^1.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "astro": "^5.7.13",
     "astro-icon": "^1.1.5",
-    "astro-typst": "0.9.0-rc1"
+    "astro-typst": "0.9.0-rc1",
+    "install": "^0.13.0",
+    "nanostores": "^1.0.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-pro-sidebar": "^1.1.0"
   }
 }
