--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "concurrently \"astro dev\" \"just watch\"",
+    "dev": "concurrently \"astro dev\" \"just make\"",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
